mdapipkg/unpackaged/objects/sample_testing__c.object
<CustomObject>
    <fields>
        <fullName>AGE__c</fullName>
        <label>AGE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>sample testing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>AGE__c</columns>
        <columns>name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>sample testing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sample testing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>hi_rule</fullName>
        <active>true</active>
        <errorConditionFormula>(AGE__c + SKU__c) &gt;20</errorConditionFormula>
        <errorDisplayField>AGE__c</errorDisplayField>
        <errorMessage>error</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>multipication_rule</fullName>
        <active>true</active>
        <errorConditionFormula>AGE__c  * 120&gt;1000</errorConditionFormula>
        <errorDisplayField>name__c</errorDisplayField>
        <errorMessage>mulipication</errorMessage>
    </validationRules>
</CustomObject>